--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   },
   "homepage": "https://github.com/seenyea/SuperDecimal#readme",
   "dependencies": {
-    "cypress": "^8.2.0",
-    "encoding": "^0.1.12",
-    "express": "^4.16.4",
-    "jsdoc": "^3.6.7",
-    "webpack": "^4.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-jest": "^27.0.6",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "cypress": "^8.2.0",
+    "encoding": "^0.1.12",
+    "express": "^4.16.4",
+    "jsdoc": "^3.6.7",
+    "webpack": "^4.29.0"
   }
 }
